trait-xml/tests/fail/where_clause_fc_noltnob.rs
trait_xml::trait_xml! {
    <trait>
        <name>Foo</name>
        <bounds>
            <type>
                <name>Bar</name>
            </type>
        </bounds>
        <where>
            <for-clause></for-clause>
        </where>
    </trait>
}

fn main() {}
